--- a/NochAnalyzer/package.json
+++ b/NochAnalyzer/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^6.1.2",
     "@mui/material": "^6.1.2",
     "@mui/x-charts": "^7.21.0",
+    "emoji-regex": "^10.4.0",
     "mui-file-input": "^6.0.0",
     "notistack": "^3.0.1",
     "react": "^18.3.1",
